aws-new/student-service-deployment-new.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-service-deployment
  namespace: student-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mstudent-service
  template:
    metadata:
      labels:
        app: student-service
    spec:
      containers:
      - name: student-service-container
        image: yathambalaiah/student-service:2
        ports:
        - containerPort: 80
