aws-new/student-service.yml
apiVersion: v1
kind: Service
metadata:
  name: student-service-service
  namespace: student-service
spec:
  selector:
    app: student-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
