aws-new/student-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-service-ingress
  namespace: student-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: student.service.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: student-service
            port:
              number: 80
